fix map flicker when scrolling quickly
Sometimes, the map would flicker between overlapping with the start-time-tag as scroll position changed. Setting z-index 0 ensures the map is rendered behind.

--- a/www/css/main.diary.css
+++ b/www/css/main.diary.css
@@ -358,6 +358,7 @@ a.item-content {
 .diary-map {
   overflow: hidden;
   border-radius: 30px 0px 0px 30px;
+  z-index: 0;
   /* height must be specified in the html */
 }
 
